version  mini viable deployable